--- a/SITE/public/css/estilo.css
+++ b/SITE/public/css/estilo.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montagu+Slab:opsz,wght@16..144,100..700&family=MonteCarlo&family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 body{
   display: flex;
   overflow-x: hidden;
@@ -6,6 +8,7 @@ body{
   height: 700vh;
   flex-direction: column;
 }
+
 header{
   display: flex;
   width: 100%;
@@ -21,7 +24,7 @@ header{
   display: flex;
   margin-left: 3%;
   width: 30%;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .nav2{
   display: flex;
@@ -33,6 +36,8 @@ header{
 header a{
   color: white;
   text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 #home{
   display: flex;
@@ -55,6 +60,8 @@ footer{
   font-size: 18px;
   font-weight: lighter;
   align-items: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 .footer{
   display: flex;
@@ -63,7 +70,7 @@ footer{
   align-items: center;
 }
 .footer img{
-  width: 20%;
+  width: 10%;
 }
 hr{
   height: 80%;
