mudança de imagens do banner sobre nos

--- a/SITE/public/css/estilo.css
+++ b/SITE/public/css/estilo.css
@@ -344,7 +344,7 @@ summary {
 }
 
 #imagem-div{
-  background-image: url(https://lenscope.com.br/blog/wp-content/uploads/2021/11/banner-luz-azul-computador-764x350-1.jpg);
+  background-image: url(https://img.freepik.com/vetores-premium/tecnologia-abstrata-com-rede-mundial-global-e-telecomunicacoes-em-dados-digitais-terrestres_258787-666.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
