--- a/SITE/public/css/login.css
+++ b/SITE/public/css/login.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  height: 98vh;
+  height: 100vh;
   background-image: url(../assets/fundo-login1.jpeg);
   background-size: cover;
   background-position: center;
@@ -10,15 +10,89 @@ body {
   color: white;
 }
 
+header{
+  display: flex;
+  width: 100%;
+  height: 8%;
+  background-color: #00375D;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-size: 18px;
+  font-weight: lighter;
+}
+.nav{
+  display: flex;
+  margin-left: 3%;
+  width: 30%;
+  justify-content: space-evenly;
+}
+.nav2{
+  display: flex;
+  margin-right: 5%;
+  width: 15%;
+  justify-content: space-around;
+  align-items: center;
+}
+header a{
+  color: white;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+footer{
+  display: flex;
+  width: 100%;
+  min-height: 180px;
+  background-color: #00375D;
+  color: white;
+  font-size: 18px;
+  font-weight: lighter;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+.footer{
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+  align-items: center;
+}
+.footer img{
+  width: 10%;
+}
+hr{
+  min-height: 130px;
+}
+.sociais{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+.sociais-img{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 30%;
+}
+.sociais img{
+  width: 20%;
+}
+
 .login {
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
 }
 
 .containers {
     display: flex;
     width: 100%;
+    height: 100%;
     justify-content: space-between;
     gap: 0px;
     flex-direction: row;
@@ -129,18 +203,18 @@ body {
 }
 
 .card-login2 p {
-    font-size: 32px;
+    font-size: 28px;
     font-weight: bold;
     font-family: "Poppins";
     max-width: 500px;
     text-align: center;
+    margin: 8px;
 }
 
 .card-login2 a {
     color: white;
     text-decoration: none;
     font-family: "Sora";
-
     transition: all 0.8s ease;
 }
 
