--- a/SITE/public/css/cadastro.css
+++ b/SITE/public/css/cadastro.css
@@ -3,14 +3,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 
-.login{
-    flex-direction: row;
-    display: flex;
-    height: 130vh;
-}
 body{
   background-color: #01163d;
   color: white;
+  height: 150vh;
+}
+
+header{
+  display: flex;
+  height: 5%;
+}
+.login{
+    flex-direction: row;
+    display: flex;
+    height: 100%;
 }
 .cadastro{
     display: flex;
@@ -33,6 +39,7 @@ h2{
     font-weight: bold;
     font-family: 'poppins', sans-serif;
     font-size: 48px;
+    margin: 0;
 }
 
 .campo{
