--- a/SITE/public/css/estilo.css
+++ b/SITE/public/css/estilo.css
@@ -432,10 +432,11 @@ img{
     max-width: 100%;
     height: 70px;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 0px !important;
-    padding-left: 20px;
-    padding-right: 80px;
+    /* justify-content: space-between; */
+    justify-content: center;
+    gap: 80px;
+    /* padding-left: 20px;
+    padding-right: 80px; */
 
     font-size: 16px;
   }
@@ -458,6 +459,7 @@ img{
   }
 
   header .nav2 {
+    width: 100%;
     max-width: 100px;
     margin-right: 20px;
   }
