--- a/SITE/public/css/estilo.css
+++ b/SITE/public/css/estilo.css
@@ -538,6 +538,7 @@ img{
   #pilares {
     max-height: 100%;
     height: 100%;
+    padding-bottom: 10px;
   }
 
   .pilares-texto {
@@ -558,6 +559,7 @@ img{
 
   .pilares-card1, .pilares-card2 {
     min-height: 350px;
+    margin: 10px;
   }
 
   /* _______________________________ */
@@ -582,7 +584,41 @@ img{
   /* =============================== */
   /* Footer */
 
-  .footer {
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
 
+  .footer {
+    order: 3;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+  }
+
+  .footer p {
+    max-width: 50%;
+  }
+
+  .footer img {
+    width: 30%;
+  }
+
+  footer hr {
+    order: 2;
+    min-height: 0px;
+    width: 90%;
+    margin: 20px;
+  }
+
+  .sociais {
+    order: 1;
+    width: 80%;
+  }
+
+  .sociais-img {
+    width: 60%;
   }
 }
