--- a/SITE/public/css/login.css
+++ b/SITE/public/css/login.css
@@ -60,9 +60,7 @@ footer{
 .footer img{
   width: 10%;
 }
-hr{
-  min-height: 130px;
-}
+
 .sociais{
   display: flex;
   flex-direction: column;
@@ -117,13 +115,6 @@ hr{
     background-color: #01163D;
 }
 
-.card-login1 hr {
-    width: 600px;
-    border: none;
-    height: 1px;
-    background: #ffffff8a; 
-    border-radius: 10px;
-}
 
 .card-login1 h2 {
     align-self: center;
@@ -171,9 +162,6 @@ hr{
     margin-bottom: 40px;
 }
 
-.formulario .campo {
-    max-width: 100%;
-}
 
 .formulario .campo input {
     font-size: 18px;
@@ -222,7 +210,14 @@ hr{
     text-align: center;
     margin: 8px;
 }
-
+.card-login1 a{
+    display: none;
+    color: white;
+    text-decoration: none;
+    font-family: "Sora";
+    transition: all 0.8s ease;
+    margin-top: 3%;
+}
 .card-login2 a {
     color: white;
     text-decoration: none;
@@ -240,4 +235,104 @@ hr{
     outline: none;
     transform: scale(1.1);
     text-decoration: underline;
+}
+
+@media screen and (max-width: 800px){
+
+    .login {
+        height: 60%;
+    }
+
+header {
+display: flex;
+max-width: 100%;
+height: 70px;
+flex-direction: row;
+/* justify-content: space-between; */
+justify-content: center;
+gap: 80px;
+/* padding-left: 20px;
+padding-right: 80px; */
+
+font-size: 16px;
+}
+
+header .nav, header .nav2 {
+text-align: center;
+align-items: center;
+margin: 0;
+}
+
+header .nav {
+display: flex;
+max-width: 200px;
+width: 400px;
+flex-direction: row;
+justify-content: space-around;
+gap: 40px;
+
+margin: 0px;
+}
+
+header .nav2 {
+width: 100%;
+max-width: 100px;
+margin-right: 20px;
+}
+.containers{
+    background-image: none;
+}
+.formulario .campo input{
+    width: 95%;
+}
+
+.card-login2{
+    display: none;
+}
+.card-login1{
+    width: 100%;
+}
+.card-login1 a{
+    display: flex;
+}
+
+footer {
+display: flex;
+flex-direction: column;
+height: 310px;
+}
+
+.footer {
+order: 3;
+width: 100%;
+display: flex;
+flex-direction: row;
+justify-content: center;
+gap: 40px;
+}
+
+.footer p {
+max-width: 50%;
+}
+
+.footer img {
+width: 30%;
+}
+
+footer hr {
+order: 2;
+min-height: 0px;
+width: 90%;
+margin: 20px;
+}
+
+.sociais {
+order: 1;
+width: 80%;
+}
+
+.sociais-img {
+width: 60%;
+}
+
 }
